--- a/.github/workflows/sonic_image_links_create_workflow.yml
+++ b/.github/workflows/sonic_image_links_create_workflow.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with GitHub Actions
 
-name: Run the shell script to generate sonic image links in sonic_image_links.json in a dedicated branch
+name: Run the shell script to generate sonic image links in Test_build_image_md.sh in a dedicated branch
 
 # Run the script once in a minute. Github may take 15 minutes to run this even though we request once in a minute, which is OK.
 on:
@@ -17,5 +17,4 @@ jobs:
       - uses: actions/checkout@v2 
         
       - name: Run the script to build a json file with details about various builds for various platforms
-        run: sh ./generate_sonic_image_links.sh
-
+        run: sh ./Test_build_image_md.sh
